--- a/SFML_Game/SFML_Game.vcxproj
+++ b/SFML_Game/SFML_Game.vcxproj
@@ -125,6 +125,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FileController.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MenuState.cpp" />
@@ -133,6 +134,7 @@
     <ClCompile Include="SoundController.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FileController.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="MenuState.h" />
