--- a/SFML_Game/SFML_Game.vcxproj
+++ b/SFML_Game/SFML_Game.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="FileController.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MapEngineController.cpp" />
     <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="OptionState.cpp" />
     <ClCompile Include="PlayState.cpp" />
@@ -137,6 +138,7 @@
     <ClInclude Include="FileController.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="MapEngineController.h" />
     <ClInclude Include="MenuState.h" />
     <ClInclude Include="OptionState.h" />
     <ClInclude Include="PlayState.h" />
