--- a/SFML_Game/SFML_Game.vcxproj
+++ b/SFML_Game/SFML_Game.vcxproj
@@ -125,24 +125,34 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entite.cpp" />
+    <ClCompile Include="Entite_mobile.cpp" />
     <ClCompile Include="FileController.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="IA_Controller.cpp" />
+    <ClCompile Include="Infanterie.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MapEngineController.cpp" />
     <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="OptionState.cpp" />
     <ClCompile Include="PlayState.cpp" />
     <ClCompile Include="SoundController.cpp" />
+    <ClCompile Include="Unites.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Entite.h" />
+    <ClInclude Include="Entite_mobile.h" />
     <ClInclude Include="FileController.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="IA_Controller.h" />
+    <ClInclude Include="Infanterie.h" />
     <ClInclude Include="MapEngineController.h" />
     <ClInclude Include="MenuState.h" />
     <ClInclude Include="OptionState.h" />
     <ClInclude Include="PlayState.h" />
     <ClInclude Include="SoundController.h" />
+    <ClInclude Include="Unites.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
